# egui-architecture

./: Cargo.toml  README.md
.github/workflows/: deploy-github-pages.yml
client_cli/: Cargo.toml
client_cli/src/: cli.rs  main.rs
client_core/: Cargo.toml
client_core/src/: api.rs  lib.rs
client_gui/: Cargo.toml  Trunk.toml  index.html
client_gui/src/: gui.rs  lib.rs  main.rs
